fixed an alignment issue

--- a/style.css
+++ b/style.css
@@ -99,20 +99,22 @@ table {
   float: right;
   text-align:center;
   color: rgb(234, 221, 203);
-  
+  margin-top: 2.8ch;
 }
 
 tr {
   background-color:rgba(11, 11, 11, 0.95)
   border-radius: 50%;
+
 }
 
 .enemyimg {
   float: right;
   max-width: 10ch;
   border-radius: 10px;
-  margin-left: 15px;
   display: block;
+  
+  /*the reason why it is at zero value is because it is need to line up the image with the title above.*/
   margin-left: 0ch;
 }
 
